--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
         <p>Para manter-se bem hidratado, lembre-se de beber cerca de
-          <span class="spanR colorResult">0L</span> de água 🧐 <span class="emoji"></span>
+          <span class="spanR colorResult">0L</span> de água por dia 🧐 <span class="emoji"></span>
 
         </p>
       </div>
