--- a/index.html
+++ b/index.html
@@ -18,28 +18,24 @@
 
     <div class="conteudo">
       <h1 class="titulo">Quer saber quanto você deve beber de água por dia?</h1>
-      <h3>Idade:</h3>
-      <input type="number" style="color:black" id=" idade" name="idade" required minlength="1" maxlength="4" size="15">
-      <h3>Peso <span style="color:rgba(63, 46, 62, 0.3)">(em Kg)</span>:</h3>
-      <input type="number" style="color:black" id=" peso" name="peso" required minlength="4" maxlength="8" size="15" placeholder="" required>
+
+      <ul class="inputs">
+        <li> <input type="number" style="color:black" id=" idade" name="idade" required minlength="1" maxlength="4" size="15" placeholder="Idade"></li>
+        <li> <input type="number" style="color:black" id=" peso" name="peso" required minlength="4" maxlength="8" size="15" placeholder=" Peso (em Kg)" required></li>
+      </ul>
+
+
+
       <br>
       <button onclick="calcularAgua()">Calcular</button>
       <div id="id-result" class="resultadoContainer">
 
-
-        <p>Para manter-se bem hidratado, lembre-se de beber cerca de
-          <span class="spanR colorResult">0L</span> de água por dia 🧐 <span class="emoji"></span>
-
-        </p>
       </div>
 
     </div>
 
   </div>
-
-
+  <script src=" script.js"></script>
 </body>
 
 </html>
-
-<script src=" script.js"></script>
